[gd_scene load_steps=3 format=3 uid="uid://dhn5qjkufvugc"]

[ext_resource type="Script" path="res://heart_gui.gd" id="1_5wbmb"]
[ext_resource type="Texture2D" uid="uid://bga05661llvsc" path="res://icon.svg" id="1_p8al2"]

[node name="Heart Gui" type="Node2D"]
script = ExtResource("1_5wbmb")

[node name="HeartFull1" type="Sprite2D" parent="."]
self_modulate = Color(1, 0, 0, 1)
position = Vector2(-155, 0)
texture = ExtResource("1_p8al2")

[node name="HeartFull2" type="Sprite2D" parent="."]
self_modulate = Color(1, 0, 0, 1)
texture = ExtResource("1_p8al2")

[node name="HeartFull3" type="Sprite2D" parent="."]
self_modulate = Color(1, 0, 0, 1)
position = Vector2(155, 0)
texture = ExtResource("1_p8al2")

[node name="HeartOFF1" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(-156, 0)
texture = ExtResource("1_p8al2")

[node name="HeartOFF2" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 1)
z_index = -1
texture = ExtResource("1_p8al2")

[node name="HeartOFF3" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(155, 0)
texture = ExtResource("1_p8al2")

[node name="Vanish_Timer" type="Timer" parent="."]
autostart = true

[node name="High Score Label" type="Label" parent="."]
offset_left = -90.0
offset_top = -136.0
offset_right = 47.0
offset_bottom = -113.0
scale = Vector2(1.3875, 1.3875)
text = "High Score: 9999"

[connection signal="timeout" from="Vanish_Timer" to="." method="_on_vanish_timer_timeout"]
